Bug 152636 - FILESAVE DOCX: export loses section page break on table.
Summary: FILESAVE DOCX: export loses section page break on table.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.6.0 target:7.5.0.2
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Page
  Show dependency treegraph
 
Reported: 2022-12-21 21:24 UTC by Justin L
Modified: 2023-01-05 10:20 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Form244F2.odt: homemade minimal example (8.43 KB, application/vnd.oasis.opendocument.text)
2022-12-21 21:24 UTC, Justin L
Details
form244F2.docm: similar problem that imports OK, but exports poorly (15.83 KB, application/vnd.ms-word.document.macroEnabled.12)
2022-12-21 21:27 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2022-12-21 21:24:49 UTC
Created attachment 184300 [details]
Form244F2.odt: homemade minimal example

Section page break on the table does not export properly.

Steps to reproduce
1.) open Form244F2.odt and export as DOCX or DOC
2.) close and re-open the round-tripped file.
Notice that all the content is on the first page. The section page break has been lost.

Tested in LO 3.6: it didn't import properly - losing the break on import
Tested in LO 5.2: imports OK, but export already broken.

Hey, but DOCX worked in 7.3 (but not DOC). Broken in 7.5 by
commit c37f62b71fa59917ef85ff98480dff18aa936e41
Author: Justin Luth on Wed Jul 20 13:03:13 2022 -0400
Comment 1 Justin L 2022-12-21 21:27:54 UTC
Created attachment 184301 [details]
form244F2.docm: similar problem that imports OK, but exports poorly

This one does not seem to be impacted by the identified commit. So it might not be a cut-and-dried regression.
Comment 2 Commit Notification 2022-12-23 01:17:16 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3963c693895779d4fba6c94b4ab1df70f9830207

tdf#152636 writerfilter: correctly detect first para in doc

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-12-23 12:31:00 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/36db0b44905a7c4cf4ceccf47948d2785e79935f

tdf#152636 writerfilter: handle breakcode on table page break

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-12-24 13:52:40 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/376152fbd110cdc0a2cde1fa9758f36c016d9352

tdf#152636 writerfilter: no w:br in DMLShapes

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-01-05 10:20:30 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/b3ddc707c3262f0a8ecd46af9efaea8382be22df

tdf#152636 writerfilter: correctly detect first para in doc

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.