tdf#152636 writerfilter: correctly detect first para in doc

This fixes LO 7.5 regression c37f62b71fa59917ef85ff98480dff18aa936e41.

It could be triggered if the second paragraph or table already
had a new page style assigned to it.

Change-Id: I5ad78c37ad6a388f7321e021250e11d22fc6e3fb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144777
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>