sw/source/filter/ww8/ww8atr.cxx
@@ -530,7 +530,10 @@ void MSWordExportBase::OutputSectionBreaks( const SfxItemSet *pSet, const SwNode
                 // A section break on the very first paragraph is ignored by LO/Word
                 // and should NOT be turned into a page break.
                 SwNodeIndex aDocEnd(m_rDoc.GetNodes().GetEndOfContent());
-                SwNodeIndex aStart(*aDocEnd.GetNode().StartOfSectionNode(), 2);
+                SwNodeIndex aStart(*aDocEnd.GetNode().StartOfSectionNode());
+                // Set aStart to the first content node in the section
+                m_rDoc.GetNodes().GoNext(&aStart);
+                assert(aStart <= aDocEnd && "impossible: end section must have one content node");
                 if (rNd.GetIndex() > aStart.GetNode().GetIndex())
                    AttrOutput().OutputItem(SvxFormatBreakItem(SvxBreak::PageBefore, RES_BREAK));
             }
